--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,2 +1,2 @@
-#remote_theme: mmistakes/so-simple-theme
-theme: jekyll-theme-cayman
+remote_theme: mmistakes/so-simple-theme
+#theme: jekyll-theme-cayman
