--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,3 +1,2 @@
-remote_theme: osievert/jekyll-theme-otto
-#remote_theme: mmistakes/so-simple-theme
+remote_theme: 0dan0/jekyll-theme-otto
 #theme: jekyll-theme-cayman
